--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -16,24 +16,22 @@
                         </div>
                         <p class="card-breed">{{dog.dog_breed}}</p>
                     </div>
-                    <form method='POST' action="{{ url_for('update_entry', usr_id=dog._id, usr_type='dogs') }}">
-                        <div class="col s2 buttons-row">
-                            <a href="#" class="waves-effect waves-light btn action-button-card">
-                                <i class="material-icons right action-button-card-icon">favorite</i>
-                                <span>Adopt</span>
-                            </a>
-                            {% if session['is_staff'] %}
-                            <button type="submit" id="{{dog._id}}" name="edit" value="dogs" class="waves-effect waves-light btn action-button-card">
-                                <i class="material-icons right action-button-card-icon">edit</i>
-                                <span>Edit</span>
-                            </button>
-                            <a href="#" name="delete_dog" class="waves-effect waves-light btn action-button-card">
-                                <i class="material-icons right action-button-card-icon">delete</i>
-                                <span>Delete</span>
-                            </a>
-                            {% endif %}
-                        </div>
-                    </form>
+                    <div class="col s2 buttons-row">
+                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">favorite</i>
+                            <span>Adopt</span>
+                        </a>
+                        {% if session['is_staff'] %}
+                        <a type="submit" id="{{dog._id}}" name="edit" value="dogs" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">edit</i>
+                            <span>Edit</span>
+                        </a>
+                        <a href="#" name="delete_dog" class="waves-effect waves-light btn action-button-card">
+                            <i class="material-icons right action-button-card-icon">delete</i>
+                            <span>Delete</span>
+                        </a>
+                        {% endif %}
+                    </div>
                     <div class="col s7">
                         <div class="card-content">
                             <p class="card-content-title">Description</p>
@@ -41,6 +39,34 @@
                         </div>
                     </div>
                 </div>
+                {% if session['is_staff'] %}
+                <div class="edit-form-box hide" id="{{dog._id}}">
+                    <form action="{{ url_for('update_dog', usr_id=dog._id) }}" method="POST" class="col s12 edit-dog-form">
+                        <div class="row">
+                            <div class="input-field col s6">
+                                <input id="dog_name" name="dog_name" type="text" class="validate" required>
+                                <label for="dog_name">{{dog.dog_name}}</label>
+                            </div>
+                            <div class="input-field col s6">
+                                <input id="dog_breed" name="dog_breed" type="text" class="validate" required>
+                                <label for="dog_breed">{{dog.dog_breed}}</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <textarea id="dog_description" name="dog_description" class="materialize-textarea"></textarea>
+                                <label for="icon_telephone">{{dog.dog_description}}</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <button action="" class="btn waves-effect waves-light" type="submit">Update
+                                <i class="material-icons right">playlist_add</i>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                {% endif %}
+
             {% endfor %}
         </div>
     </div>
