changed link for back button

--- a/templates/successful.html
+++ b/templates/successful.html
@@ -8,7 +8,7 @@
     <div class="row container">      
         <div class="buttons-row">
         <h2>Entry updated!</h2>
-            <a href="javascript:history.back()" class="waves-effect waves-light btn action-button-card">
+            <a href="{{ url_for('get_dogs') }}" class="waves-effect waves-light btn action-button-card">
                 <i class="material-icons right action-button-card-icon">favorite</i>
                 <span>Go Back</span>
             </a>
