Updated training to service on base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,13 +17,13 @@
                     <ul id="nav-mobile" class="hide-on-med-and-down">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
-                        <li><a href="{{url_for('get_services')}}">Training</a></li>
+                        <li><a href="{{url_for('get_services')}}">Services</a></li>
                         <li><a href="{{url_for('get_stores')}}">Stores</a></li>                
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
-                        <li><a href="{{url_for('get_services')}}">Training</a></li>
+                        <li><a href="{{url_for('get_services')}}">Services</a></li>
                         <li><a href="{{url_for('get_stores')}}">Stores</a></li> 
                     </ul>
                 </div>
@@ -32,7 +32,7 @@
                     <a class="header" href="{{url_for('user_home')}}" >PAWER</a>
                     <div class="three-words">
                         <p>|ADOPTION</p>
-                        <p>|TRAINING</p>
+                        <p>|SERVICES</p>
                         <p>|STORES</p>
                     </div>
                 </div>
