Update function working - not refactored

--- a/templates/register.html
+++ b/templates/register.html
@@ -91,12 +91,12 @@
                 <form action="{{ url_for('insert_user') }}" method="POST" class="col s12">
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="user_first_name" name="user_first_name" type="text" class="validate" required>
-                            <label for="user_first_name">First Name</label>
+                            <input id="first_name" name="first_name" type="text" class="validate" required>
+                            <label for="first_name">First Name</label>
                         </div>
                         <div class="input-field col s6">
-                            <input id="user_last_name" name="user_last_name" type="text" class="validate">
-                            <label for="user_last_name">Last Name</label>
+                            <input id="last_name" name="last_name" type="text" class="validate">
+                            <label for="last_name">Last Name</label>
                         </div>
                     </div>
                     <div class="row">
