--- a/templates/stores.html
+++ b/templates/stores.html
@@ -16,7 +16,7 @@
                         </div>
                     </div>
                     <div class="col s2 buttons-row">
-                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                        <a type="submit" id="{{store._id}}" name="edit" value="store" class="waves-effect waves-light btn action-button-card">
                             <i class="material-icons right action-button-card-icon">edit</i>
                             <span>Edit</span>
                         </a>
@@ -33,6 +33,46 @@
                         </div>
                     </div>
                 </div>
+                {% if session['is_staff'] %}
+                <div class="edit-form-box hide" id="{{ store._id }}">
+                    <form action="{{ url_for('update_store', usr_id=store._id) }}" method="POST" class="col s12">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="store_name" name="store_name" type="text" class="validate">
+                                <label for="store_name">{{store.store_name}}</label>
+                            </div>
+                            <div class="input-field col s6">
+                                <input id="store_address" name="store_address" type="text" class="validate" required>
+                                <label for="store_addres">store.store_address</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="_email" name="_email" type="email" class="validate">
+                        <label for="_email">{{store._email}}</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="password" name="password" type="password" class="validate">
+                                <label for="password">{{store.password}}</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <textarea id="store_description" name="store_description" class="materialize-textarea"></textarea>
+                                <label for="store_description">{{store.store_description}}</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <button class="btn waves-effect waves-light" type="submit">Update Account
+                                <i class="material-icons right">playlist_add</i>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+
+                {% endif %}
             {% endfor %}
         </div>
     </div>
