--- a/templates/users.html
+++ b/templates/users.html
@@ -40,24 +40,24 @@
                     <form action="{{ url_for('update_user', usr_id=user._id) }}" method="POST" class="col s12">
                         <div class="row">
                             <div class="input-field col s6">
-                                <input id="user_first_name" name="user_first_name" type="text" class="validate" required>
-                                <label for="user_first_name">First Name</label>
+                                <input id="first_name" name="first_name" type="text" class="validate" required>
+                                <label for="first_name">{{user.first_name}}</label>
                             </div>
                             <div class="input-field col s6">
-                                <input id="user_last_name" name="user_last_name" type="text" class="validate">
-                                <label for="user_last_name">Last Name</label>
+                                <input id="last_name" name="last_name" type="text" class="validate">
+                                <label for="last_name">{{user.last_name}}</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
                                 <input id="password" name="password" type="password" class="validate">
-                                <label for="password">Password</label>
+                                <label for="password">{{user.password}}</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
                                 <input id="_email" name="_email" type="email" class="validate">
-                                <label for="_email">Email</label>
+                                <label for="_email">{{user._email}}</label>
                             </div>
                         </div>
                         <div class="row">
@@ -72,11 +72,11 @@
                         <div class="row">
                             <div class="input-field col s12">
                                 <textarea id="user_description" name="user_description" class="materialize-textarea"></textarea>
-                                <label for="user_description">Bio</label>
+                                <label for="user_description">{{user.user_description}}</label>
                             </div>
                         </div>
                         <div class="row">
-                            <button class="btn waves-effect waves-light" type="submit">Create Account
+                            <button class="btn waves-effect waves-light" type="submit">Update Account
                                 <i class="material-icons right">playlist_add</i>
                             </button>
                         </div>
