Updated edit and delete buttons

--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -26,7 +26,7 @@
                             <i class="material-icons right action-button-card-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a href="#" name="delete_dog" class="waves-effect waves-light btn action-button-card">
+                        <a href="{{ url_for('delete_dog', usr_id=dog._id)}}" type="submit" id="{{dog._id}}" name="delete_dog" class="waves-effect waves-light btn action-button-card delete-button">
                             <i class="material-icons right action-button-card-icon">delete</i>
                             <span>Delete</span>
                         </a>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="row">
                             <button action="" class="btn waves-effect waves-light" type="submit">Update
-                                <i class="material-icons right">playlist_add</i>
+                                <i class="material-icons right">edit</i>
                             </button>
                         </div>
                     </form>
