--- a/templates/services.html
+++ b/templates/services.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="row">
                             <button class="btn waves-effect waves-light" type="submit">Update Service
-                                <i class="material-icons right">playlist_add</i>
+                                <i class="material-icons right">edit</i>
                             </button>
                         </div>
                     </form>
