--- a/templates/stores.html
+++ b/templates/stores.html
@@ -42,8 +42,8 @@
                                 <label for="store_name">{{store.store_name}}</label>
                             </div>
                             <div class="input-field col s6">
-                                <input id="store_address" name="store_address" type="text" class="validate" required>
-                                <label for="store_addres">store.store_address</label>
+                                <input id="store_address" name="store_address" type="text" class="validate">
+                                <label for="store_addres">{{store.store_address}}</label>
                             </div>
                         </div>
                         <div class="row">
@@ -66,7 +66,7 @@
                         </div>
                         <div class="row">
                             <button class="btn waves-effect waves-light" type="submit">Update Account
-                                <i class="material-icons right">playlist_add</i>
+                                <i class="material-icons right">edit</i>
                             </button>
                         </div>
                     </form>
