--- a/templates/users.html
+++ b/templates/users.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="row">
                             <button class="btn waves-effect waves-light" type="submit">Update Account
-                                <i class="material-icons right">playlist_add</i>
+                                <i class="material-icons right">edit</i>
                             </button>
                         </div>
                     </form>
