Updated delete button settings on user page

--- a/templates/users.html
+++ b/templates/users.html
@@ -20,7 +20,7 @@
                             <i class="material-icons right action-button-card-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a href="#" class="waves-effect waves-light btn action-button-card">
+                        <a type="submit" id="{{user._id}}" name="delete_user" class="waves-effect waves-light btn action-button-card delete-button>
                             <i class="material-icons right action-button-card-icon">delete</i>
                             <span>Delete</span>
                         </a>
