users delete/edit dynamic forms working

--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -66,7 +66,7 @@
                     </form>
                 </div>
                 <div class="delete-form-box hide" id="{{dog._id}}">
-                    <form action="{{ url_for('delete_dog', usr_id=dog._id) }}" method="POST" class="col s12 delete-dog-form">
+                    <form action="{{ url_for('delete_dog', usr_id=dog._id) }}" method="POST" class="col s12 delete-form">
                         <div class="row">
                            <h3>Are you sure ou want to delete?</h3>
                             <button action="" class="btn waves-effect waves-light" type="submit">Yes, Delete
