--- a/templates/users.html
+++ b/templates/users.html
@@ -16,11 +16,11 @@
                         </div>
                     </div>
                     <div class="col s2 buttons-row">
-                        <a type="submit" id="{{user._id}}" name="edit" value="user" class="waves-effect waves-light btn action-button-card">
+                        <a type="submit" id="{{user._id}}" name="edit" value="user" class="waves-effect waves-light btn action-button-card edit_button">
                             <i class="material-icons right action-button-card-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a type="submit" id="{{user._id}}" name="delete_user" class="waves-effect waves-light btn action-button-card delete-button>
+                        <a type="submit" id="{{user._id}}" name="delete_user" class="waves-effect waves-light btn action-button-card delete-button">
                             <i class="material-icons right action-button-card-icon">delete</i>
                             <span>Delete</span>
                         </a>
@@ -78,6 +78,16 @@
                         <div class="row">
                             <button class="btn waves-effect waves-light" type="submit">Update Account
                                 <i class="material-icons right">edit</i>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                <div class="delete-form-box hide" id="{{user._id}}">
+                    <form action="{{ url_for('delete_user', usr_id=user._id) }}" method="POST" class="col s12 delete-form">
+                        <div class="row">
+                           <h3>Are you sure ou want to delete?</h3>
+                            <button action="" class="btn waves-effect waves-light" type="submit">Yes, Delete
+                                <i class="material-icons right">delete</i>
                             </button>
                         </div>
                     </form>
