--- a/templates/register.html
+++ b/templates/register.html
@@ -114,9 +114,10 @@
                     <div class="row">
                         <div class="switch">
                             <label>
+                            Client
                             <input id="is_staff" name="is_staff" type="checkbox">
                             <span class="lever"></span>
-                            Is Staff
+                            Staff
                             </label>
                         </div>
                     </div>
