--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -19,13 +19,11 @@
 </div>
 <div class="section white">
     <div class="row container">
-        <h2 class="header">Go training!</h2>
-        <p class="secondary-text">Find the best trainers and places where you can train your dog!</p>
-        <p>There's no better thing than going out and showing off your dog working with you...Having your friends saying how well behaviored they are!</p>
-        <p>We have a great pool of certified professionals that can help you reaching your goals and even more. Most options will offer you different levels of training, 
-        depending on how you and your dog are communicating.</p>
-        <p>One-on-one or group sessions are available all year around.</p>
-        <h4>Visit our <a href="{{url_for('get_services')}}" >PAWER Training</a> page</h4>
+        <h2 class="header">Pawer Services!</h2>
+        <p class="secondary-text">Find the best trainers, groomers and vets!</p>
+        <p>There's no better thing than going out and showing off a healthy, good looking dog while having your friends saying how smart and well behaved they are!</p>
+        <p>We have a great pool of certified professionals that can help you reaching your goals and even more.</p>
+        <h4>Visit our <a href="{{url_for('get_services')}}" >PAWER Services</a> page</h4>
     </div>
 </div>  
 <div class="parallax-container">
@@ -34,10 +32,8 @@
 <div class="section white">
     <div class="row container">
         <h2 class="header">Go shopping!</h2>
-        <p class="secondary-text">Looking for dog food, new toys, vets, grooming and other services? We've got your back!</p>
+        <p class="secondary-text">Looking for dog food, new toys, medicines and more? We've got your back!</p>
         <p>Go through a variety of shops that offer as many options of products as you can dare to imagine!</p>
-        <p>The staff in store are looking forward to help you finding whar you're looking for and guide you to the best choices.</p>
-        <p>If you prefer to buy online, some stores offer you live chat for support in real time.</p>
         <h4>Visit our <a href="{{url_for('get_stores')}}" >PAWER Shops</a> page</h4>
     </div>
 </div>  
