--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -8,7 +8,7 @@
     <div class="row container">
         <div class="row card-row-find">
             {% for dog in dogs %}
-                <div class="card row find-row">
+                <div class="card row card-item-row">
                     <div class="col s3">
                         <p class="card-title">{{dog.dog_name}}</p>
                         <div class="card-image">
@@ -16,18 +16,18 @@
                         </div>
                         <p class="card-breed">{{dog.dog_breed}}</p>
                     </div>
-                    <div class="col s2 buttons-row">
-                        <a href="#" class="waves-effect waves-light btn action-button-card">
-                            <i class="material-icons right action-button-card-icon">favorite</i>
+                    <div class="col s2 card-buttons-row">
+                        <a href="#" class="waves-effect waves-light btn card-action-button">
+                            <i class="material-icons right card-action-button-icon">favorite</i>
                             <span>Adopt</span>
                         </a>
                         {% if session['is_staff'] %}
-                        <a type="submit" id="{{dog._id}}" name="edit" value="dogs" class="waves-effect waves-light btn action-button-card edit_button">
-                            <i class="material-icons right action-button-card-icon">edit</i>
+                        <a type="submit" id="{{dog._id}}" name="edit" value="dogs" class="waves-effect waves-light btn card-action-button edit_button">
+                            <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a type="submit" id="{{dog._id}}" name="delete_dog" class="waves-effect waves-light btn action-button-card delete-button">
-                            <i class="material-icons right action-button-card-icon">delete</i>
+                        <a type="submit" id="{{dog._id}}" name="delete_dog" class="waves-effect waves-light btn card-action-button delete-button">
+                            <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
                         {% endif %}
