--- a/templates/services.html
+++ b/templates/services.html
@@ -8,7 +8,7 @@
     <div class="row container">
         <div class="row card-row-find">
             {% for service in services %}
-                <div class="card row find-row">
+                <div class="card row card-item-row">
                     <div class="col s3">
                         <p class="card-title">{{service.type_of_service}}</p>
                         <div class="card-image">
@@ -17,12 +17,12 @@
                     </div>
                     {% if session['is_staff'] %}
                     <div class="col s2 buttons-row">
-                        <a type="submit" id="{{service._id}}" name="edit" value="service" class="waves-effect waves-light btn action-button-card">
-                            <i class="material-icons right action-button-card-icon">edit</i>
+                        <a type="submit" id="{{service._id}}" name="edit" value="service" class="waves-effect waves-light btn card-action-button">
+                            <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a href="#" class="waves-effect waves-light btn action-button-card">
-                            <i class="material-icons right action-button-card-icon">delete</i>
+                        <a href="#" class="waves-effect waves-light btn card-action-button">
+                            <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
                     </div>
