--- a/templates/stores.html
+++ b/templates/stores.html
@@ -8,7 +8,7 @@
     <div class="row container">
         <div class="row card-row-find">
             {% for store in stores %}
-                <div class="card row find-row">
+                <div class="card row card-item-row">
                     <div class="col s3">
                         <p class="card-title">{{store.store_name}}</p>
                         <div class="card-image">
@@ -16,12 +16,12 @@
                         </div>
                     </div>
                     <div class="col s2 buttons-row">
-                        <a type="submit" id="{{store._id}}" name="edit" value="store" class="waves-effect waves-light btn action-button-card">
-                            <i class="material-icons right action-button-card-icon">edit</i>
+                        <a type="submit" id="{{store._id}}" name="edit" value="store" class="waves-effect waves-light btn card-action-button">
+                            <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a href="#" class="waves-effect waves-light btn action-button-card">
-                            <i class="material-icons right action-button-card-icon">delete</i>
+                        <a href="#" class="waves-effect waves-light btn card-action-button">
+                            <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
                     </div>
