--- a/templates/users.html
+++ b/templates/users.html
@@ -8,7 +8,7 @@
     <div class="row container">
         <div class="row card-row-find">
             {% for user in users %}
-                <div class="card row find-row">
+                <div class="card row card-item-row">
                     <div class="col s3">
                         <p class="card-title">{{user.first_name}} {{user.last_name}}</p>
                         <div class="card-image">
@@ -17,12 +17,12 @@
                     </div>
                     {% if ( session['is_staff'] or user._id == session['_id'] ) %}
                     <div class="col s2 buttons-row">
-                        <a type="submit" id="{{user._id}}" name="edit" value="user" class="waves-effect waves-light btn action-button-card edit_button">
-                            <i class="material-icons right action-button-card-icon">edit</i>
+                        <a type="submit" id="{{user._id}}" name="edit" value="user" class="waves-effect waves-light btn card-action-button edit_button">
+                            <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a type="submit" id="{{user._id}}" name="delete_user" class="waves-effect waves-light btn action-button-card delete-button">
-                            <i class="material-icons right action-button-card-icon">delete</i>
+                        <a type="submit" id="{{user._id}}" name="delete_user" class="waves-effect waves-light btn card-action-button delete-button">
+                            <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
                     </div>
