--- a/static/sass/base/_typography.scss
+++ b/static/sass/base/_typography.scss
@@ -1,14 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lexend+Tera|Roboto&display=swap');
+/* Typography */
 
+@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lexend+Tera|Roboto&display=swap');
+.heading-text {
+    font-family: "Alfa Slab One", sans-serif;
+    font-size: 3rem;
+    color: $black-color;
+}
 .secondary-text {
     font-family: "Lexend Tera", sans-serif;
     color: $black-color;
     font-weight: 900;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
 }
 
 p {
     font-family: "Roboto", sans-serif;
     color: $black-color;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
