Updated styles in sass module structure

--- a/static/sass/abstracts/_mixins.scss
+++ b/static/sass/abstracts/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin border-radius {
+@mixin border-radius-05 {
     -webkit-border-radius: 0.5rem!important;
     -moz-border-radius: 0.5rem!important;
     -ms-border-radius: 0.5rem!important;
