--- a/static/sass/layout/_cards.scss
+++ b/static/sass/layout/_cards.scss
@@ -1,9 +1,8 @@
+/* Cards */
+
 .card-row-find {
     display: flex;
     flex-direction: column;
-}
-.card-item-row {
-    display: flex;
 }
 .card-buttons-row {
         margin: auto;
