--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,271 +1,20 @@
-$yellow-color: #FCD23C;
-$red-color: #D8414B;
-$black-color: #343334;
-$blue-color: #1184ff;
+
 
 @import 'abstracts/mixins';
+@import 'abstracts/variables';
 
-@import 'base/reset';
+@import 'base/presets';
 @import 'base/typography';
+
+@import 'layout/header';
+@import 'layout/cards';
+@import 'layout/footer';
+
+@import 'pages/login';
+@import 'pages/register';
 
 @import 'components/buttons';
 @import 'components/cards';
 
-@import 'layout/cards';
-@import 'layout/footer';
-// @import 'layout/forms';
-@import 'layout/header';
-
-
-@import 'pages/base';
-@import 'pages/login';
-@import 'pages/register';
-
 @import 'layout/mediaQueries';
 
-
-/* General */
-
-// @import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lexend+Tera|Roboto&display=swap');
-
-
-
-// @mixin border-radius {
-//     -webkit-border-radius: 0.5rem!important;
-//     -moz-border-radius: 0.5rem!important;
-//     -ms-border-radius: 0.5rem!important;
-//     border-radius: 0.5rem!important;
-// }
-
-
-
-
-// html {
-//     scroll-behavior: smooth;
-// }
-// body {
-//     text-align: center;
-// }
-// a {
-//     text-decoration: none;
-//     color: black;
-// }
-
-// .header {
-//     font-family: "Alfa Slab One", sans-serif;
-//     font-size: 5rem;
-//     color: $black-color;
-// } 
-
-// .secondary-text {
-//     font-family: "Lexend Tera", sans-serif;
-//     color: $black-color;
-//     font-weight: 900;
-//     font-size: 2.5rem;
-// }
-
-// p {
-//     font-family: "Roboto", sans-serif;
-//     color: $black-color;
-//     font-size: 1.5rem;
-// }
-
-
-// .parallax-container {
-//     top: 5.5rem;
-//     width: 100%;
-// }
-
-// [type="radio"]:not(:checked), [type="radio"]:checked {
-//     position: relative;
-//     opacity: 1;
-// }
-
-// Base.html
-
-// nav {
-//     position: fixed;
-//     z-index: 2;
-// }
-// .nav-wrapper {
-//     background-color: $yellow-color;
-//     padding: 0 1rem;
-
-//     .menu-box {
-//         display: flex;
-//         padding: 0;
-//         max-height: 100%;
-
-//         .menu-icon {
-//             color: $black-color;
-//         }
-        
-//         li {
-//             max-height: 100%;
-//         }
-//     }
-
-//     li a {
-//         font-family: "Roboto", sans-serif;
-//         font-weight: 700;
-//         color: $black-color;
-//     }
-//     .button-collapse {
-//         padding: 0.5rem 0;
-//     }
-//     .logo-box {
-//         display: flex;
-//         justify-content: center;
-//         padding: 0.2rem 0;
-
-//         .three-words {
-//             padding: 0 0.3rem 0.6rem;
-//             text-align: left;
-
-//             p {
-//                 margin: 0;
-//                 color: $red-color;
-//                 font-size: 1.2rem;
-//                 line-height: 1.3rem;
-//                 font-weight: 600;
-//             }
-//         }
-//         img {
-//             max-height: 4rem;
-//             // margin: 0.2rem 0.5rem;
-//         }
-//     }
-    
-//     .register-box {
-//         text-align: right;
-//         font-size: 1.5rem;
-//         padding: 0;
-//     }
-
-//     span {
-//         color: $red-color;
-//         font-family: "Lexend Tera", "Sans Serif";
-//         color: $black-color;
-//         font-size: 1.3rem;
-//         line-height: 1.3rem;
-//     }
-
-//     .register-button {
-//         color: $black-color;
-//         font-weight: 700;
-//         margin: auto;
-//         padding: 0;
-//         width: 35%;
-//     }
-
-// }
-
-// #sidenav-overlay {
-//     z-index: 1;
-// }
-
-// .page-footer {
-//     background-color: $yellow-color;
-//     color: $black-color;
-//     font-family: "Roboto", sans-serif;
-    
-//     h5 {
-//         font-weight: 900;
-//     }
-// }
-
-/* User_home */
-
-
-// Cards
-
-// .card-row-register {
-//     display: flex;
-// }
-// .card-row-find {
-//     display: flex;
-//     flex-direction: column;
-// }
-// .find-row {
-//     display: flex;
-
-//     .buttons-row {
-//         margin: auto;
-
-//         .action-button-card {
-//             width: 100%;
-//             padding: 0 0.5rem;
-//             margin: 1rem 0;
-
-//             .action-button-card-icon{
-//                 margin: 0 0.5rem;
-//             }
-//         }
-//     }
-// }
-
-// .card {
-//     min-height: 100%;
-//     padding: 2.5rem 0 0;
-    
-//     .card-title{
-//         color: $black-color;
-//         font-weight: 500;
-//         margin-top: 0;
-//     }
-//     .card-icon{
-//         font-size: 7rem;
-//     }
-//     .card-content {
-//         margin: 0 2rem;
-//         padding: 0;
-//         text-align: left;
-//     }
-//     .cards_buttons {
-//         margin: 1rem;
-//     }
-//     .card-content-title {
-//         font-size: 2rem;
-//     }
-//     .card-icon {
-//         opacity: 0.5;
-//     }
-// }
-
-// Login.html
-
-// .login-radio{
-//     label{
-//         margin: 1rem;
-//         font-size: 1.5rem;
-//         font-weight: 700;
-//     }
-// }
-
-
-
-
-
-
-// @media only screen and (min-width: 601px) {
-//     nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
-//         // height: 6rem;
-//     }
-//     .menu-icon{
-//         font-size: 4rem!important;
-//         margin: -0.5rem!important;
-//     }
-// }
-
-// @media screen and (max-width: 1025px) {
-//     nav {
-//         height: 5.5rem;
-//         padding: 0.5rem;
-//         background-color: #FCD23C;
-//     }
-
-//     .nav-wrapper li a {
-//         padding: 0 0.5rem;
-//     }
-
-// }
