--- a/static/sass/components/_buttons.scss
+++ b/static/sass/components/_buttons.scss
@@ -1,3 +1,4 @@
+/* Buttons */
 
 .nav-action-button {
     color: #343334;
@@ -10,7 +11,12 @@
     width: 100%;
     padding: 0 0.5rem;
     margin: 1rem 0;
+    font-family: Lexend Tera, sans-serif;
+    font-weight: 600;
 }
 .card-action-button-icon {
     margin: 0 0.5rem;
 }
+// .cards-buttons {
+//     margin: 1rem;
+// }
