--- a/static/sass/layout/_header.scss
+++ b/static/sass/layout/_header.scss
@@ -1,14 +1,16 @@
+/* Header */
+
 nav {
     position: fixed;
     z-index: 2;
 }
 .nav-wrapper {
     background-color: $yellow-color;
-    padding: 0 1rem;
+    // padding: 0 1rem;
 }
 .menu-box {
     display: flex;
-    padding: 0;
+    padding: 0!important;
     max-height: 100%;
 
     li {
@@ -24,41 +26,35 @@ nav {
 .menu-icon {
     color: $black-color;
 }
-.button-collapse {
-    padding: 0.5rem 0;
-}
+// .button-collapse {
+//     padding: 0.5rem 0;
+// }
 .logo-box {
     display: flex;
     justify-content: center;
-    padding: 0.2rem 0;
+    padding-left: 5rem!important;
+    max-height: 100%;
 
     img {
-        max-height: 4rem;
-        // margin: 0.2rem 0.5rem;
-    }
-
-    span {
-        color: $red-color;
-        font-family: "Lexend Tera", "Sans Serif";
-        color: $black-color;
-        font-size: 1.3rem;
-        line-height: 1.3rem;
+        max-height: 2.3rem;
+        margin: auto;
     }
 }
-.header {
+.pawer-logo-name {
     font-family: "Alfa Slab One", sans-serif;
-    font-size: 5rem;
+    font-size: 2.5rem;
     color: $black-color;
-} 
+}
+
 .three-words {
-    padding: 0 0.3rem 0.6rem;
+    padding: 0.4rem 0.4rem;
     text-align: left;
 
     p {
         margin: 0;
         color: $red-color;
-        font-size: 1.2rem;
-        line-height: 1.3rem;
+        font-size: 1rem;
+        line-height: 1rem;
         font-weight: 600;
     }
 }
@@ -66,7 +62,4 @@ nav {
     text-align: right;
     font-size: 1.5rem;
     padding: 0;
-}
-#sidenav-overlay {
-    z-index: 1;
 }
