--- a/static/sass/layout/_mediaQueries.scss
+++ b/static/sass/layout/_mediaQueries.scss
@@ -1,3 +1,5 @@
+/* Media Queries */
+
 @media only screen and (min-width: 601px) {
     .menu-icon{
         font-size: 4rem!important;
@@ -6,14 +8,14 @@
 }
 
 @media screen and (max-width: 1025px) {
-    nav {
-        height: 5.5rem;
-        padding: 0.5rem;
-        background-color: #FCD23C;
-    }
+    // nav {
+    //     height: 5.5rem;
+    //     padding: 0.5rem 0;
+    //     background-color: #FCD23C;
+    // }
 
-    .nav-wrapper li a {
-        padding: 0 0.5rem;
-    }
+    // .nav-wrapper li a {
+    //     padding: 0 0.5rem;
+    // }
 
 }
