Updated html classes to match sass files

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,14 +33,14 @@
                 </div>
                 <div class="col s4 logo-box">
                     <img src="./static/images/pawer_logo.png" alt="Pawer Logo">
-                    <a class="header" href="{{url_for('user_home')}}" >PAWER</a>
+                    <a class="pawer-logo-name" href="{{url_for('user_home')}}" >PAWER</a>
                     <div class="three-words">
                         <p>|ADOPTION</p>
                         <p>|SERVICES</p>
                         <p>|STORES</p>
                     </div>
                 </div>
-                <div class="col s4 register-box">
+                <div class="col s4 register-box hide-on-small-only">
                     <a href="{{url_for('register')}}" class="btn waves-effect general-text nav-action-button">Register</a>
                     <a href="{{url_for('user_login')}}" class="btn waves-effect general-text nav-action-button">Login</a>
                 </div>
