--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 </div>
 <div class="section white">
     <div class="row container">
-        <h2 class="header">Login</h2>
+        <h2 class="heading-text">Login</h2>
         {% if user == 'invalid' %}
             <h5>Invalid User</h5>
         {% endif %}
