--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 </div>
 <div class="section white">
     <div class="row container">
-        <h2 class="header">Register</h2>
+        <h2 class="heading-text">Register</h2>
         <p>Choose one of the categories below to choose a type for your account</p>
         <div class="row card-row-register">
             <div class="col s3">
