--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -5,18 +5,18 @@
     <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
 </div>
 <div class="section white">
-    <div class="row container">
+    <div class="container">
         <div class="row card-row-find">
             {% for dog in dogs %}
-                <div class="card row card-item-row">
-                    <div class="col s3">
+                <div class="row card card-item-row">
+                    <div class="col s12 m3">
                         <p class="card-title">{{dog.dog_name}}</p>
                         <div class="card-image">
                             <i class="material-icons card-icon">pets</i>
                         </div>
                         <p class="card-breed">{{dog.dog_breed}}</p>
                     </div>
-                    <div class="col s2 card-buttons-row">
+                    <div class="col s12 m2 card-buttons-row">
                         <a href="#" class="waves-effect waves-light btn card-action-button">
                             <i class="material-icons right card-action-button-icon">favorite</i>
                             <span>Adopt</span>
@@ -32,7 +32,7 @@
                         </a>
                         {% endif %}
                     </div>
-                    <div class="col s7">
+                    <div class="col s12 m7">
                         <div class="card-content">
                             <p class="card-content-title">Description</p>
                             <p class="truncate">{{dog.dog_description}}</p>
