--- a/templates/services.html
+++ b/templates/services.html
@@ -9,14 +9,14 @@
         <div class="row card-row-find">
             {% for service in services %}
                 <div class="card row card-item-row">
-                    <div class="col s3">
+                    <div class="col s12 m3">
                         <p class="card-title">{{service.type_of_service}}</p>
                         <div class="card-image">
                             <i class="material-icons card-icon">supervisor_account</i>
                         </div>
                     </div>
                     {% if session['is_staff'] %}
-                    <div class="col s2 buttons-row">
+                    <div class="col s12 m2 buttons-row">
                         <a type="submit" id="{{service._id}}" name="edit" value="service" class="waves-effect waves-light btn card-action-button">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
@@ -27,7 +27,7 @@
                         </a>
                     </div>
                     {% endif %}
-                    <div class="col s7">
+                    <div class="col s12 m7">
                         <div class="card-content">
                             <p class="card-content-title">Description</p>
                             <p>Provider: {{service.first_name}} {{service.last_name}}</p>
