--- a/templates/users.html
+++ b/templates/users.html
@@ -9,14 +9,14 @@
         <div class="row card-row-find">
             {% for user in users %}
                 <div class="card row card-item-row">
-                    <div class="col s3">
+                    <div class="col s12 m3">
                         <p class="card-title">{{user.first_name}} {{user.last_name}}</p>
                         <div class="card-image">
                             <i class="material-icons card-icon">person</i>
                         </div>
                     </div>
                     {% if ( session['is_staff'] or user._id == session['_id'] ) %}
-                    <div class="col s2 buttons-row">
+                    <div class="col s12 m2 buttons-row">
                         <a type="submit" id="{{user._id}}" name="edit" value="user" class="waves-effect waves-light btn card-action-button edit_button">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
@@ -27,7 +27,7 @@
                         </a>
                     </div>
                     {% endif %}
-                    <div class="col s7">
+                    <div class="col s12 m7">
                         <div class="card-content">
                             {% if user.is_staff == 'on' %}
                                 <h4>STAFF</h4>
