--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,10 @@
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
                         <li><a href="{{url_for('get_services')}}">Services</a></li>
                         <li><a href="{{url_for('get_stores')}}">Stores</a></li> 
+                        <div class="row register-box show-on-small-only">
+                            <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
+                            <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect general-text nav-action-button">Login</a>
+                        </div>
                     </ul>
                 </div>
                 <div class="col s4 logo-box">
