--- a/static/sass/base/_presets.scss
+++ b/static/sass/base/_presets.scss
@@ -1,4 +1,4 @@
-/* Presets */
+/* Presets / Overrides */
 
 html {
     scroll-behavior: smooth;
@@ -10,21 +10,25 @@ a {
     text-decoration: none;
     color: black;
 }
+.section {
+    padding-top: 0; 
+    padding-bottom: 0; 
+}
 .container {
     padding: 1rem;
 }
+/* Parallax */
 .parallax-container {
-    top: 5.5rem;
     width: 100%;
+    height: 60vh;
 }
 .parallax-container .parallax img {
     max-width: 300%;
 }
-
-[type="radio"]:not(:checked), [type="radio"]:checked {
-    position: relative;
-    opacity: 1;
-}
+/* Collapsible menu */
 #sidenav-overlay {
   z-index: 1;
+}
+.drag-target {
+    z-index: 1;
 }
