Updated imports on main.scss

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -6,9 +6,10 @@
 @import 'base/presets';
 @import 'base/typography';
 
-@import 'layout/header';
+@import 'layout/navbar';
 @import 'layout/cards';
 @import 'layout/footer';
+@import 'layout/forms';
 
 @import 'pages/login';
 @import 'pages/register';
@@ -16,6 +17,7 @@
 @import 'components/buttons';
 @import 'components/cards';
 @import 'components/sidenav';
+@import 'components/radio-buttons';
 
 @import 'layout/mediaQueries';
 
