--- a/static/sass/main.css
+++ b/static/sass/main.css
@@ -1,4 +1,4 @@
-/* Presets */
+/* Presets / Overrides */
 @import url("https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lexend+Tera|Roboto&display=swap");
 html {
   scroll-behavior: smooth;
@@ -13,25 +13,31 @@ a {
   color: black;
 }
 
+.section {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .container {
   padding: 1rem;
 }
 
+/* Parallax */
 .parallax-container {
-  top: 5.5rem;
   width: 100%;
+  height: 60vh;
 }
 
 .parallax-container .parallax img {
   max-width: 300%;
 }
 
-[type="radio"]:not(:checked), [type="radio"]:checked {
-  position: relative;
-  opacity: 1;
+/* Collapsible menu */
+#sidenav-overlay {
+  z-index: 1;
 }
 
-#sidenav-overlay {
+.drag-target {
   z-index: 1;
 }
 
@@ -159,20 +165,17 @@ nav .button-collapse {
   font-weight: 900;
 }
 
-/* Login Page */
-.login-radio label {
-  margin: 1rem;
-  font-size: 1.5rem;
-  font-weight: 700;
+/* Forms */
+.login-form {
+  padding: 0;
+  text-align: center;
+}
+
+.login-form p {
+  text-align: center;
 }
 
 /* Register Page */
-.card-row-register {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 /* Buttons */
 .nav-action-button {
   color: #343334;
@@ -197,7 +200,7 @@ nav .button-collapse {
 /* Cards */
 .card {
   min-height: 100%;
-  padding: 2.5rem 0 0;
+  padding: 2rem 0 0;
 }
 
 .card-title {
@@ -237,6 +240,18 @@ nav .button-collapse {
 
 .side-nav .nav-action-button {
   margin: 0.5rem 0;
+}
+
+/* Radio Buttons */
+.login-radio label {
+  margin: 0.5rem;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+[type="radio"]:not(:checked), [type="radio"]:checked {
+  position: relative;
+  opacity: 1;
 }
 
 /* Media Queries */
